fix nav log in badge flicker

--- a/src/app/header/header.bar.styl
+++ b/src/app/header/header.bar.styl
@@ -10,7 +10,7 @@
     position: relative;
   }
 
-  .loading {
+  & > .loading {
     position: absolute;
     width: 100%;
     overflow hidden;
